Prevents horizontal scroll.

--- a/client/src/views/User/User.css
+++ b/client/src/views/User/User.css
@@ -1,24 +1,11 @@
-@media screen and (max-width: 1100px){
-  .user{
-    flex-direction: column;
-    align-items: center;
-  }
-}
-@media screen and (max-width: 320px){
-  App {
-    overflow-x: hidden;
-  }
-  .user{
-    flex-direction: column;
-    align-items: center;
-    border: 5px solid red;
-  }
+#root {
+  overflow-x: hidden;
 }
 
 .username {
   text-align: center;
+  width: 15rem;
   margin: 0 auto;
-  width: 25rem;
   padding: 10px;
   background-color: var(--med);
   border: 2px solid var(--dark);
